--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ httpx = {version = "^0.19.0", allow-prereleases = true}
 fastapi = {extras = ["all"], version = "^0.68.1"}
 uvicorn = {version = "<0.15.0", extras = ["standard"]}
 Jinja2 = "<3.0.0"
+pony = "^0.7.14"
 
 [tool.poetry.dev-dependencies]
 
